# spatial-partitioning

./: CMakeLists.txt  LICENSE  README.md
include/: aabb.hpp  point.hpp  quadtree.hpp  solution.h
src/: main.cpp  quadtree.cpp  solution.cpp
